Small refactor - code smells, java clean code